feat(social): expose admin user comments
